# src/routes/routes.ts
@@ -4,7 +4,7 @@
 import type { TsoaRoute } from '@tsoa/runtime';
 import {  fetchMiddlewares, ExpressTemplateService } from '@tsoa/runtime';
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
-import { testeCOntroller } from './../controller/testeController';
+import { AlunosController } from './../controller/AlunoController';
 import type { Request as ExRequest, Response as ExResponse, RequestHandler, Router } from 'express';
 
 
@@ -12,11 +12,30 @@ import type { Request as ExRequest, Response as ExResponse, RequestHandler, Rout
 // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
 const models: TsoaRoute.Models = {
+    "AlunoInsertDto": {
+        "dataType": "refObject",
+        "properties": {
+            "nome": {"dataType":"string","required":true},
+            "email": {"dataType":"string","required":true},
+            "cpf": {"dataType":"string","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
     "BasicResponseDto": {
         "dataType": "refObject",
         "properties": {
             "message": {"dataType":"string","required":true},
             "object": {"dataType":"any","required":true},
+        },
+        "additionalProperties": false,
+    },
+    // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+    "AlunoUpdateDto": {
+        "dataType": "refObject",
+        "properties": {
+            "nome": {"dataType":"string","required":true},
+            "email": {"dataType":"string","required":true},
         },
         "additionalProperties": false,
     },
@@ -38,26 +57,155 @@ export function RegisterRoutes(app: Router) {
 
 
     
-        const argstesteCOntroller_teste: Record<string, TsoaRoute.ParameterSchema> = {
-                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+        const argsAlunosController_cadastrarAluno: Record<string, TsoaRoute.ParameterSchema> = {
+                dto: {"in":"body","name":"dto","required":true,"ref":"AlunoInsertDto"},
+                sucess: {"in":"res","name":"201","required":true,"ref":"BasicResponseDto"},
                 fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
         };
-        app.get('/teste',
-            ...(fetchMiddlewares<RequestHandler>(testeCOntroller)),
-            ...(fetchMiddlewares<RequestHandler>(testeCOntroller.prototype.teste)),
+        app.post('/alunos',
+            ...(fetchMiddlewares<RequestHandler>(AlunosController)),
+            ...(fetchMiddlewares<RequestHandler>(AlunosController.prototype.cadastrarAluno)),
 
-            async function testeCOntroller_teste(request: ExRequest, response: ExResponse, next: any) {
+            async function AlunosController_cadastrarAluno(request: ExRequest, response: ExResponse, next: any) {
 
             // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
 
             let validatedArgs: any[] = [];
             try {
-                validatedArgs = templateService.getValidatedArgs({ args: argstesteCOntroller_teste, request, response });
+                validatedArgs = templateService.getValidatedArgs({ args: argsAlunosController_cadastrarAluno, request, response });
 
-                const controller = new testeCOntroller();
+                const controller = new AlunosController();
 
               await templateService.apiHandler({
-                methodName: 'teste',
+                methodName: 'cadastrarAluno',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsAlunosController_filtrarAlunoId: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.get('/alunos/:id',
+            ...(fetchMiddlewares<RequestHandler>(AlunosController)),
+            ...(fetchMiddlewares<RequestHandler>(AlunosController.prototype.filtrarAlunoId)),
+
+            async function AlunosController_filtrarAlunoId(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsAlunosController_filtrarAlunoId, request, response });
+
+                const controller = new AlunosController();
+
+              await templateService.apiHandler({
+                methodName: 'filtrarAlunoId',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsAlunosController_listarAlunos: Record<string, TsoaRoute.ParameterSchema> = {
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.get('/alunos',
+            ...(fetchMiddlewares<RequestHandler>(AlunosController)),
+            ...(fetchMiddlewares<RequestHandler>(AlunosController.prototype.listarAlunos)),
+
+            async function AlunosController_listarAlunos(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsAlunosController_listarAlunos, request, response });
+
+                const controller = new AlunosController();
+
+              await templateService.apiHandler({
+                methodName: 'listarAlunos',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsAlunosController_atualizarAluno: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                dto: {"in":"body","name":"dto","required":true,"ref":"AlunoUpdateDto"},
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.put('/alunos/:id',
+            ...(fetchMiddlewares<RequestHandler>(AlunosController)),
+            ...(fetchMiddlewares<RequestHandler>(AlunosController.prototype.atualizarAluno)),
+
+            async function AlunosController_atualizarAluno(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsAlunosController_atualizarAluno, request, response });
+
+                const controller = new AlunosController();
+
+              await templateService.apiHandler({
+                methodName: 'atualizarAluno',
+                controller,
+                response,
+                next,
+                validatedArgs,
+                successStatus: undefined,
+              });
+            } catch (err) {
+                return next(err);
+            }
+        });
+        // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+        const argsAlunosController_removerAluno: Record<string, TsoaRoute.ParameterSchema> = {
+                id: {"in":"path","name":"id","required":true,"dataType":"double"},
+                sucess: {"in":"res","name":"200","required":true,"ref":"BasicResponseDto"},
+                fail: {"in":"res","name":"400","required":true,"ref":"BasicResponseDto"},
+        };
+        app.delete('/alunos/:id',
+            ...(fetchMiddlewares<RequestHandler>(AlunosController)),
+            ...(fetchMiddlewares<RequestHandler>(AlunosController.prototype.removerAluno)),
+
+            async function AlunosController_removerAluno(request: ExRequest, response: ExResponse, next: any) {
+
+            // WARNING: This file was auto-generated with tsoa. Please do not modify it. Re-run tsoa to re-generate this file: https://github.com/lukeautry/tsoa
+
+            let validatedArgs: any[] = [];
+            try {
+                validatedArgs = templateService.getValidatedArgs({ args: argsAlunosController_removerAluno, request, response });
+
+                const controller = new AlunosController();
+
+              await templateService.apiHandler({
+                methodName: 'removerAluno',
                 controller,
                 response,
                 next,
